# gazan

./: .flatpakignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  __main__.py  add_remote_dialog.py  claude.md  icons.py  io.codeberg.subhagadirli.Gazan.desktop  io.codeberg.subhagadirli.Gazan.metainfo.xml  io.codeberg.subhagadirli.Gazan.yml  main.py  providers.py  pyproject.toml  rclone.py  remotes_page.py  window.py
.forgejo/workflows/: publish.yml
gazan/: __main__.py  application.py
gazan/backend/: config.py  providers.py  rclone.py
gazan/ui/: add_remote_dialog.py  edit_remote_dialog.py  icons.py  remotes_page.py  transfer_panel.py  window.py
src/gazan/ui/: window.py
