[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gazan"
version = "0.1.1"
description = "Browse, upload, download and manage cloud files"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Subhan Gadirli", email = "subhagadirli@protonmail.com" },
]
keywords = ["rclone", "gtk4", "gnome", "cloud", "libadwaita", "files"]
dependencies = [
    "PyGObject",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: Internet :: File Transfer Protocol (FTP)",
]

[project.scripts]
gazan = "gazan.application:main"

[project.urls]
Repository = "https://codeberg.org/subhangadirli/gazan"
"Bug Tracker" = "https://codeberg.org/subhangadirli/gazan/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gazan*"]

[tool.setuptools.package-data]
gazan = [
    "assets/gazan-logos/*",
    "assets/provider-logos/*",
    "assets/hicolor/scalable/apps/*",
    "assets/hicolor/128x128/apps/*",
    "assets/hicolor/256x256/apps/*",
    "assets/hicolor/512x512/apps/*",
]